--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <label for="menu-toggle" class="hamburger">&#9776;</label>
     <!-- قائمة الأزرار -->
     <div class="shortcut-buttons">
-      <a href="#home" class="shortcut-button">Home</a>
-      <a href="#about" class="shortcut-button">About</a>
-      <a href="#services" class="shortcut-button">Services</a>
+      <a href="https://omar0elmallah.github.io/tamce/" class="shortcut-button">blog</a>
+      <a href="https://devhub-arabic.blogspot.com/" class="shortcut-button">community</a>
+      <a href="https://omarelmallah.pythonanywhere.com/" class="shortcut-button">ai</a>
       <a href="#contact" class="shortcut-button">Contact</a>
     </div>
   </div>
