--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <a href="https://omar0elmallah.github.io/tamce/" class="shortcut-button">blog</a>
       <a href="https://devhub-arabic.blogspot.com/" class="shortcut-button">community</a>
       <a href="https://omarelmallah.pythonanywhere.com/" class="shortcut-button">ai</a>
-      <a href="#contact" class="shortcut-button">Contact</a>
+      <a href=" https://omar0elmallah.github.io/contact/" class="shortcut-button">Contact</a>
     </div>
   </div>
 
@@ -42,7 +42,7 @@
     <h1 class="heading neon-text">download</h1>
     <h1 class="heading neon-text">new version 1.1 beta</h1>
     <div class="button">
-      <a download="dovert 1.1 beta" href="download.jpg">Download</a>
+      <a download="dovert 3.0.0 beta" href="download.jpg">Download</a>
       <p class="top">click to begin</p>
       <p class="bottom">10gb.zip</p>
     </div>
@@ -50,47 +50,7 @@
   <h5 class="info animate-on-scroll">new ver. 1.1beta 2-2025</h5>
   
   <!-- شريط التمرير (Ticker) -->
-  <div class="ticker-wrapper" id="tickerWrapper">
-    <div class="ticker">
-      <!-- تم تعديل روابط الصور لتكون مثالاً، قم بتعديلها حسب الحاجة -->
-      <a href="Screenshot1.png" target="_blank">
-        <img src="Screenshot1.png" alt="app">
-      </a>
-      <a href="Screenshot2.png" target="_blank">
-        <img src="Screenshot2.png" alt="app">
-      </a>
-      <a href="Screenshot3.png" target="_blank">
-        <img src="Screenshot3.png" alt="app">
-      </a>
-      <a href="Screenshot4.png" target="_blank">
-        <img src="Screenshot4.png" alt="app">
-      </a>
-              <a href="Screenshot1.png" target="_blank">
-        <img src="Screenshot1.png" alt="app">
-      </a>
-      <a href="Screenshot2.png" target="_blank">
-        <img src="Screenshot2.png" alt="app">
-      </a>
-      <a href="Screenshot3.png" target="_blank">
-        <img src="Screenshot3.png" alt="app">
-      </a>
-      <a href="Screenshot4.png" target="_blank">
-        <img src="Screenshot4.png" alt="app">
-      </a>
-              <a href="Screenshot1.png" target="_blank">
-        <img src="Screenshot1.png" alt="app">
-      </a>
-      <a href="Screenshot2.png" target="_blank">
-        <img src="Screenshot2.png" alt="app">
-      </a>
-      <a href="Screenshot3.png" target="_blank">
-        <img src="Screenshot3.png" alt="app">
-      </a>
-      <a href="Screenshot4.png" target="_blank">
-        <img src="Screenshot4.png" alt="app">
-      </a>
-   
-    </div>
+
   </div>
   
   <div class="qr">
