--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Download Taming</title>
+  <title>Download DoVertor 3.0.0</title>
   <link rel="stylesheet" href="sss.css">
 </head>
 <body>
@@ -29,8 +29,8 @@
     <label for="menu-toggle" class="hamburger">&#9776;</label>
     <!-- قائمة الأزرار -->
     <div class="shortcut-buttons">
-      <a href="https://omar0elmallah.github.io/tamce/" class="shortcut-button">blog</a>
-      <a href="https://devhub-arabic.blogspot.com/" class="shortcut-button">community</a>
+      <a href="https://omar0elmallah.github.io/tamce/" class="shortcut-button">community</a>
+      <a href="https://devhub-arabic.blogspot.com/" class="shortcut-button">blog</a>
       <a href="https://omarelmallah.pythonanywhere.com/" class="shortcut-button">ai</a>
       <a href=" https://omar0elmallah.github.io/contact/" class="shortcut-button">Contact</a>
     </div>
@@ -40,14 +40,14 @@
   <div class="container animate-on-scroll">
     <img src="Convert-Icon.png" alt="logo" class="app-logo" width="50" height="50">
     <h1 class="heading neon-text">download</h1>
-    <h1 class="heading neon-text">new version 1.1 beta</h1>
+    <h1 class="heading neon-text">new version 3.0.0 pro </h1>
     <div class="button">
       <a download="dovert 3.0.0 beta" href="download.jpg">Download</a>
       <p class="top">click to begin</p>
-      <p class="bottom">10gb.zip</p>
+      <p class="bottom">86.6 MB.zip</p>
     </div>
   </div>
-  <h5 class="info animate-on-scroll">new ver. 1.1beta 2-2025</h5>
+  <h5 class="info animate-on-scroll">new ver. 3.0.0 6/2025</h5>
   
   <!-- شريط التمرير (Ticker) -->
 
